# juye

./: .gitignore  .gitmodules  CMakeLists.txt
data/shaders/: builtin_geometrypass.meta.yaml  builtin_skybox.meta.yaml  builtin_skybox.pixel.glsl  builtin_skybox.vert.glsl
include/juye/: juye.h  prefabs.h
include/juye/gk/: primitives.h
samples/: hellotriangle.cpp
scripts/: deps.py  env.sh  shader.py
src/: CMakeLists.txt
src/core/: debug.h  global.h  juye.cpp
src/core/configuration/: build_generation.h.in
src/core/drivers/: device.cpp  device.h
src/core/drivers/VK/: tmp.cpp  vk_core.cpp  vk_core.h  vk_debug.h  vk_helper.h  vk_wrappers.cpp  vkdefines.h  vkentry.h  vkinternal.cpp  vkinternal.h  vkresource.cpp  vkresource.h  vkshader.cpp  vkshader.h
src/core/drivers/VK/MemoryVK/: MemoryVK.cpp  MemoryVK.h
src/core/fsystem/: file.h  image.cpp
src/core/gpu/VK/: vk_core.cpp  vk_core.h  vk_defines.h  vk_helper.cpp  vk_helper.h  vk_internal.cpp  vk_internal.h  vk_wrappers.h  vkshader.cpp
src/core/gpu/VK/MemoryVK/: MemoryVK.cpp  MemoryVK.h  readme.md
src/core/pch/: assertions.h  error.h
src/gfx/: gfx.cpp  gfx.h
src/gk/: actions.cpp  actions.h  gk.cpp  gk.h  keyboard.h  prefabs.cpp  prefabs.h
src/gk/model/: mesh.h
